Bug#19599 duplication of information_schema column value in a CONCAT expr with user var mark result string using String::mark_as_const() which prevents CONCAT from reusing it as a buffer for concatenation result.